AFLL/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_definition
Rule 2     function_definition -> type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 3     parameters -> parameter_list
Rule 4     parameters -> empty
Rule 5     parameter_list -> parameter_list COMMA parameter
Rule 6     parameter_list -> parameter
Rule 7     parameter -> type IDENTIFIER
Rule 8     type -> INT
Rule 9     type -> VOID
Rule 10    for_loop -> FOR LPAREN for_init SEMI condition SEMI for_update RPAREN LBRACE statements RBRACE
Rule 11    for_init -> assignment
Rule 12    for_init -> declaration
Rule 13    for_init -> empty
Rule 14    for_update -> assignment
Rule 15    for_update -> empty
Rule 16    do_while_loop -> DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMI
Rule 17    if_else_statement -> IF LPAREN condition RPAREN LBRACE statements RBRACE else_part
Rule 18    else_part -> ELSE LBRACE statements RBRACE
Rule 19    else_part -> ELSE if_else_statement
Rule 20    else_part -> empty
Rule 21    switch_statement -> SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
Rule 22    case_list -> case_list case
Rule 23    case_list -> case
Rule 24    case -> CASE expression COLON statements BREAK SEMI
Rule 25    case -> DEFAULT COLON statements BREAK SEMI
Rule 26    statements -> statements statement
Rule 27    statements -> statement
Rule 28    statements -> empty
Rule 29    statement -> expression_statement
Rule 30    statement -> declaration_statement
Rule 31    statement -> if_else_statement
Rule 32    statement -> for_loop
Rule 33    statement -> do_while_loop
Rule 34    statement -> switch_statement
Rule 35    statement -> return_statement
Rule 36    statement -> LBRACE statements RBRACE
Rule 37    expression_statement -> expression SEMI
Rule 38    expression_statement -> assignment SEMI
Rule 39    expression_statement -> SEMI
Rule 40    declaration_statement -> declaration SEMI
Rule 41    declaration -> type IDENTIFIER
Rule 42    declaration -> type IDENTIFIER ASSIGN expression
Rule 43    assignment -> IDENTIFIER ASSIGN expression
Rule 44    condition -> expression
Rule 45    expression -> simple_expression
Rule 46    expression -> simple_expression relation simple_expression
Rule 47    simple_expression -> term
Rule 48    simple_expression -> simple_expression PLUS term
Rule 49    simple_expression -> simple_expression MINUS term
Rule 50    term -> factor
Rule 51    term -> term MULT factor
Rule 52    term -> term DIV factor
Rule 53    factor -> IDENTIFIER
Rule 54    factor -> NUMBER
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    relation -> EQ
Rule 57    relation -> NE
Rule 58    relation -> LT
Rule 59    relation -> LE
Rule 60    relation -> GT
Rule 61    relation -> GE
Rule 62    return_statement -> RETURN expression SEMI
Rule 63    return_statement -> RETURN SEMI
Rule 64    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 42 43
BREAK                : 24 25
CASE                 : 24
COLON                : 24 25
COMMA                : 5
DEFAULT              : 25
DIV                  : 52
DO                   : 16
ELSE                 : 18 19
EQ                   : 56
FOR                  : 10
GE                   : 61
GT                   : 60
IDENTIFIER           : 2 7 41 42 43 53
IF                   : 17
INT                  : 8
LBRACE               : 2 10 16 17 18 21 36
LE                   : 59
LPAREN               : 2 10 16 17 21 55
LT                   : 58
MINUS                : 49
MULT                 : 51
NE                   : 57
NUMBER               : 54
PLUS                 : 48
RBRACE               : 2 10 16 17 18 21 36
RETURN               : 62 63
RPAREN               : 2 10 16 17 21 55
SEMI                 : 10 10 16 24 25 37 38 39 40 62 63
SWITCH               : 21
VOID                 : 9
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

assignment           : 11 14 38
case                 : 22 23
case_list            : 21 22
condition            : 10 16 17
declaration          : 12 40
declaration_statement : 30
do_while_loop        : 33
else_part            : 17
empty                : 4 13 15 20 28
expression           : 21 24 37 42 43 44 55 62
expression_statement : 29
factor               : 50 51 52
for_init             : 10
for_loop             : 32
for_update           : 10
function_definition  : 1
if_else_statement    : 19 31
parameter            : 5 6
parameter_list       : 3 5
parameters           : 2
program              : 0
relation             : 46
return_statement     : 35
simple_expression    : 45 46 46 48 49
statement            : 26 27
statements           : 2 10 16 17 18 24 25 26 36
switch_statement     : 34
term                 : 47 48 49 51 52
type                 : 2 7 41 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_definition
    (2) function_definition -> . type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (8) type -> . INT
    (9) type -> . VOID

    INT             shift and go to state 4
    VOID            shift and go to state 5

    program                        shift and go to state 1
    function_definition            shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function_definition .

    $end            reduce using rule 1 (program -> function_definition .)


state 3

    (2) function_definition -> type . IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 6


state 4

    (8) type -> INT .

    IDENTIFIER      reduce using rule 8 (type -> INT .)


state 5

    (9) type -> VOID .

    IDENTIFIER      reduce using rule 9 (type -> VOID .)


state 6

    (2) function_definition -> type IDENTIFIER . LPAREN parameters RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 7


state 7

    (2) function_definition -> type IDENTIFIER LPAREN . parameters RPAREN LBRACE statements RBRACE
    (3) parameters -> . parameter_list
    (4) parameters -> . empty
    (5) parameter_list -> . parameter_list COMMA parameter
    (6) parameter_list -> . parameter
    (64) empty -> .
    (7) parameter -> . type IDENTIFIER
    (8) type -> . INT
    (9) type -> . VOID

    RPAREN          reduce using rule 64 (empty -> .)
    INT             shift and go to state 4
    VOID            shift and go to state 5

    type                           shift and go to state 8
    parameters                     shift and go to state 9
    parameter_list                 shift and go to state 10
    empty                          shift and go to state 11
    parameter                      shift and go to state 12

state 8

    (7) parameter -> type . IDENTIFIER

    IDENTIFIER      shift and go to state 13


state 9

    (2) function_definition -> type IDENTIFIER LPAREN parameters . RPAREN LBRACE statements RBRACE

    RPAREN          shift and go to state 14


state 10

    (3) parameters -> parameter_list .
    (5) parameter_list -> parameter_list . COMMA parameter

    RPAREN          reduce using rule 3 (parameters -> parameter_list .)
    COMMA           shift and go to state 15


state 11

    (4) parameters -> empty .

    RPAREN          reduce using rule 4 (parameters -> empty .)


state 12

    (6) parameter_list -> parameter .

    COMMA           reduce using rule 6 (parameter_list -> parameter .)
    RPAREN          reduce using rule 6 (parameter_list -> parameter .)


state 13

    (7) parameter -> type IDENTIFIER .

    COMMA           reduce using rule 7 (parameter -> type IDENTIFIER .)
    RPAREN          reduce using rule 7 (parameter -> type IDENTIFIER .)


state 14

    (2) function_definition -> type IDENTIFIER LPAREN parameters RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 16


state 15

    (5) parameter_list -> parameter_list COMMA . parameter
    (7) parameter -> . type IDENTIFIER
    (8) type -> . INT
    (9) type -> . VOID

    INT             shift and go to state 4
    VOID            shift and go to state 5

    parameter                      shift and go to state 17
    type                           shift and go to state 8

state 16

    (2) function_definition -> type IDENTIFIER LPAREN parameters RPAREN LBRACE . statements RBRACE
    (26) statements -> . statements statement
    (27) statements -> . statement
    (28) statements -> . empty
    (29) statement -> . expression_statement
    (30) statement -> . declaration_statement
    (31) statement -> . if_else_statement
    (32) statement -> . for_loop
    (33) statement -> . do_while_loop
    (34) statement -> . switch_statement
    (35) statement -> . return_statement
    (36) statement -> . LBRACE statements RBRACE
    (64) empty -> .
    (37) expression_statement -> . expression SEMI
    (38) expression_statement -> . assignment SEMI
    (39) expression_statement -> . SEMI
    (40) declaration_statement -> . declaration SEMI
    (17) if_else_statement -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else_part
    (10) for_loop -> . FOR LPAREN for_init SEMI condition SEMI for_update RPAREN LBRACE statements RBRACE
    (16) do_while_loop -> . DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMI
    (21) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (62) return_statement -> . RETURN expression SEMI
    (63) return_statement -> . RETURN SEMI
    (45) expression -> . simple_expression
    (46) expression -> . simple_expression relation simple_expression
    (43) assignment -> . IDENTIFIER ASSIGN expression
    (41) declaration -> . type IDENTIFIER
    (42) declaration -> . type IDENTIFIER ASSIGN expression
    (47) simple_expression -> . term
    (48) simple_expression -> . simple_expression PLUS term
    (49) simple_expression -> . simple_expression MINUS term
    (8) type -> . INT
    (9) type -> . VOID
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . IDENTIFIER
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN

  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for SEMI resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    LBRACE          shift and go to state 21
    RBRACE          reduce using rule 64 (empty -> .)
    SEMI            shift and go to state 33
    IF              shift and go to state 36
    FOR             shift and go to state 37
    DO              shift and go to state 38
    SWITCH          shift and go to state 39
    RETURN          shift and go to state 40
    IDENTIFIER      shift and go to state 19
    INT             shift and go to state 4
    VOID            shift and go to state 5
    NUMBER          shift and go to state 44
    LPAREN          shift and go to state 20

  ! LBRACE          [ reduce using rule 64 (empty -> .) ]
  ! SEMI            [ reduce using rule 64 (empty -> .) ]
  ! IF              [ reduce using rule 64 (empty -> .) ]
  ! FOR             [ reduce using rule 64 (empty -> .) ]
  ! DO              [ reduce using rule 64 (empty -> .) ]
  ! SWITCH          [ reduce using rule 64 (empty -> .) ]
  ! RETURN          [ reduce using rule 64 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 64 (empty -> .) ]
  ! INT             [ reduce using rule 64 (empty -> .) ]
  ! VOID            [ reduce using rule 64 (empty -> .) ]
  ! NUMBER          [ reduce using rule 64 (empty -> .) ]
  ! LPAREN          [ reduce using rule 64 (empty -> .) ]

    type                           shift and go to state 18
    statements                     shift and go to state 22
    statement                      shift and go to state 23
    empty                          shift and go to state 24
    expression_statement           shift and go to state 25
    declaration_statement          shift and go to state 26
    if_else_statement              shift and go to state 27
    for_loop                       shift and go to state 28
    do_while_loop                  shift and go to state 29
    switch_statement               shift and go to state 30
    return_statement               shift and go to state 31
    expression                     shift and go to state 32
    assignment                     shift and go to state 34
    declaration                    shift and go to state 35
    simple_expression              shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 17

    (5) parameter_list -> parameter_list COMMA parameter .

    COMMA           reduce using rule 5 (parameter_list -> parameter_list COMMA parameter .)
    RPAREN          reduce using rule 5 (parameter_list -> parameter_list COMMA parameter .)


state 18

    (41) declaration -> type . IDENTIFIER
    (42) declaration -> type . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 45


state 19

    (43) assignment -> IDENTIFIER . ASSIGN expression
    (53) factor -> IDENTIFIER .

    ASSIGN          shift and go to state 46
    MULT            reduce using rule 53 (factor -> IDENTIFIER .)
    DIV             reduce using rule 53 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 53 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 53 (factor -> IDENTIFIER .)
    EQ              reduce using rule 53 (factor -> IDENTIFIER .)
    NE              reduce using rule 53 (factor -> IDENTIFIER .)
    LT              reduce using rule 53 (factor -> IDENTIFIER .)
    LE              reduce using rule 53 (factor -> IDENTIFIER .)
    GT              reduce using rule 53 (factor -> IDENTIFIER .)
    GE              reduce using rule 53 (factor -> IDENTIFIER .)
    SEMI            reduce using rule 53 (factor -> IDENTIFIER .)


state 20

    (55) factor -> LPAREN . expression RPAREN
    (45) expression -> . simple_expression
    (46) expression -> . simple_expression relation simple_expression
    (47) simple_expression -> . term
    (48) simple_expression -> . simple_expression PLUS term
    (49) simple_expression -> . simple_expression MINUS term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . IDENTIFIER
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 44
    LPAREN          shift and go to state 20

    expression                     shift and go to state 47
    simple_expression              shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 21

    (36) statement -> LBRACE . statements RBRACE
    (26) statements -> . statements statement
    (27) statements -> . statement
    (28) statements -> . empty
    (29) statement -> . expression_statement
    (30) statement -> . declaration_statement
    (31) statement -> . if_else_statement
    (32) statement -> . for_loop
    (33) statement -> . do_while_loop
    (34) statement -> . switch_statement
    (35) statement -> . return_statement
    (36) statement -> . LBRACE statements RBRACE
    (64) empty -> .
    (37) expression_statement -> . expression SEMI
    (38) expression_statement -> . assignment SEMI
    (39) expression_statement -> . SEMI
    (40) declaration_statement -> . declaration SEMI
    (17) if_else_statement -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else_part
    (10) for_loop -> . FOR LPAREN for_init SEMI condition SEMI for_update RPAREN LBRACE statements RBRACE
    (16) do_while_loop -> . DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMI
    (21) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (62) return_statement -> . RETURN expression SEMI
    (63) return_statement -> . RETURN SEMI
    (45) expression -> . simple_expression
    (46) expression -> . simple_expression relation simple_expression
    (43) assignment -> . IDENTIFIER ASSIGN expression
    (41) declaration -> . type IDENTIFIER
    (42) declaration -> . type IDENTIFIER ASSIGN expression
    (47) simple_expression -> . term
    (48) simple_expression -> . simple_expression PLUS term
    (49) simple_expression -> . simple_expression MINUS term
    (8) type -> . INT
    (9) type -> . VOID
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . IDENTIFIER
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN

  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for SEMI resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    LBRACE          shift and go to state 21
    RBRACE          reduce using rule 64 (empty -> .)
    SEMI            shift and go to state 33
    IF              shift and go to state 36
    FOR             shift and go to state 37
    DO              shift and go to state 38
    SWITCH          shift and go to state 39
    RETURN          shift and go to state 40
    IDENTIFIER      shift and go to state 19
    INT             shift and go to state 4
    VOID            shift and go to state 5
    NUMBER          shift and go to state 44
    LPAREN          shift and go to state 20

  ! LBRACE          [ reduce using rule 64 (empty -> .) ]
  ! SEMI            [ reduce using rule 64 (empty -> .) ]
  ! IF              [ reduce using rule 64 (empty -> .) ]
  ! FOR             [ reduce using rule 64 (empty -> .) ]
  ! DO              [ reduce using rule 64 (empty -> .) ]
  ! SWITCH          [ reduce using rule 64 (empty -> .) ]
  ! RETURN          [ reduce using rule 64 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 64 (empty -> .) ]
  ! INT             [ reduce using rule 64 (empty -> .) ]
  ! VOID            [ reduce using rule 64 (empty -> .) ]
  ! NUMBER          [ reduce using rule 64 (empty -> .) ]
  ! LPAREN          [ reduce using rule 64 (empty -> .) ]

    statements                     shift and go to state 49
    statement                      shift and go to state 23
    empty                          shift and go to state 24
    expression_statement           shift and go to state 25
    declaration_statement          shift and go to state 26
    if_else_statement              shift and go to state 27
    for_loop                       shift and go to state 28
    do_while_loop                  shift and go to state 29
    switch_statement               shift and go to state 30
    return_statement               shift and go to state 31
    expression                     shift and go to state 32
    assignment                     shift and go to state 34
    declaration                    shift and go to state 35
    simple_expression              shift and go to state 41
    type                           shift and go to state 18
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 22

    (2) function_definition -> type IDENTIFIER LPAREN parameters RPAREN LBRACE statements . RBRACE
    (26) statements -> statements . statement
    (29) statement -> . expression_statement
    (30) statement -> . declaration_statement
    (31) statement -> . if_else_statement
    (32) statement -> . for_loop
    (33) statement -> . do_while_loop
    (34) statement -> . switch_statement
    (35) statement -> . return_statement
    (36) statement -> . LBRACE statements RBRACE
    (37) expression_statement -> . expression SEMI
    (38) expression_statement -> . assignment SEMI
    (39) expression_statement -> . SEMI
    (40) declaration_statement -> . declaration SEMI
    (17) if_else_statement -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else_part
    (10) for_loop -> . FOR LPAREN for_init SEMI condition SEMI for_update RPAREN LBRACE statements RBRACE
    (16) do_while_loop -> . DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMI
    (21) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (62) return_statement -> . RETURN expression SEMI
    (63) return_statement -> . RETURN SEMI
    (45) expression -> . simple_expression
    (46) expression -> . simple_expression relation simple_expression
    (43) assignment -> . IDENTIFIER ASSIGN expression
    (41) declaration -> . type IDENTIFIER
    (42) declaration -> . type IDENTIFIER ASSIGN expression
    (47) simple_expression -> . term
    (48) simple_expression -> . simple_expression PLUS term
    (49) simple_expression -> . simple_expression MINUS term
    (8) type -> . INT
    (9) type -> . VOID
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . IDENTIFIER
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN

    RBRACE          shift and go to state 50
    LBRACE          shift and go to state 21
    SEMI            shift and go to state 33
    IF              shift and go to state 36
    FOR             shift and go to state 37
    DO              shift and go to state 38
    SWITCH          shift and go to state 39
    RETURN          shift and go to state 40
    IDENTIFIER      shift and go to state 19
    INT             shift and go to state 4
    VOID            shift and go to state 5
    NUMBER          shift and go to state 44
    LPAREN          shift and go to state 20

    type                           shift and go to state 18
    statement                      shift and go to state 51
    expression_statement           shift and go to state 25
    declaration_statement          shift and go to state 26
    if_else_statement              shift and go to state 27
    for_loop                       shift and go to state 28
    do_while_loop                  shift and go to state 29
    switch_statement               shift and go to state 30
    return_statement               shift and go to state 31
    expression                     shift and go to state 32
    assignment                     shift and go to state 34
    declaration                    shift and go to state 35
    simple_expression              shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 23

    (27) statements -> statement .

    RBRACE          reduce using rule 27 (statements -> statement .)
    LBRACE          reduce using rule 27 (statements -> statement .)
    SEMI            reduce using rule 27 (statements -> statement .)
    IF              reduce using rule 27 (statements -> statement .)
    FOR             reduce using rule 27 (statements -> statement .)
    DO              reduce using rule 27 (statements -> statement .)
    SWITCH          reduce using rule 27 (statements -> statement .)
    RETURN          reduce using rule 27 (statements -> statement .)
    IDENTIFIER      reduce using rule 27 (statements -> statement .)
    INT             reduce using rule 27 (statements -> statement .)
    VOID            reduce using rule 27 (statements -> statement .)
    NUMBER          reduce using rule 27 (statements -> statement .)
    LPAREN          reduce using rule 27 (statements -> statement .)
    BREAK           reduce using rule 27 (statements -> statement .)


state 24

    (28) statements -> empty .

    RBRACE          reduce using rule 28 (statements -> empty .)
    LBRACE          reduce using rule 28 (statements -> empty .)
    SEMI            reduce using rule 28 (statements -> empty .)
    IF              reduce using rule 28 (statements -> empty .)
    FOR             reduce using rule 28 (statements -> empty .)
    DO              reduce using rule 28 (statements -> empty .)
    SWITCH          reduce using rule 28 (statements -> empty .)
    RETURN          reduce using rule 28 (statements -> empty .)
    IDENTIFIER      reduce using rule 28 (statements -> empty .)
    INT             reduce using rule 28 (statements -> empty .)
    VOID            reduce using rule 28 (statements -> empty .)
    NUMBER          reduce using rule 28 (statements -> empty .)
    LPAREN          reduce using rule 28 (statements -> empty .)
    BREAK           reduce using rule 28 (statements -> empty .)


state 25

    (29) statement -> expression_statement .

    RBRACE          reduce using rule 29 (statement -> expression_statement .)
    LBRACE          reduce using rule 29 (statement -> expression_statement .)
    SEMI            reduce using rule 29 (statement -> expression_statement .)
    IF              reduce using rule 29 (statement -> expression_statement .)
    FOR             reduce using rule 29 (statement -> expression_statement .)
    DO              reduce using rule 29 (statement -> expression_statement .)
    SWITCH          reduce using rule 29 (statement -> expression_statement .)
    RETURN          reduce using rule 29 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 29 (statement -> expression_statement .)
    INT             reduce using rule 29 (statement -> expression_statement .)
    VOID            reduce using rule 29 (statement -> expression_statement .)
    NUMBER          reduce using rule 29 (statement -> expression_statement .)
    LPAREN          reduce using rule 29 (statement -> expression_statement .)
    BREAK           reduce using rule 29 (statement -> expression_statement .)


state 26

    (30) statement -> declaration_statement .

    RBRACE          reduce using rule 30 (statement -> declaration_statement .)
    LBRACE          reduce using rule 30 (statement -> declaration_statement .)
    SEMI            reduce using rule 30 (statement -> declaration_statement .)
    IF              reduce using rule 30 (statement -> declaration_statement .)
    FOR             reduce using rule 30 (statement -> declaration_statement .)
    DO              reduce using rule 30 (statement -> declaration_statement .)
    SWITCH          reduce using rule 30 (statement -> declaration_statement .)
    RETURN          reduce using rule 30 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 30 (statement -> declaration_statement .)
    INT             reduce using rule 30 (statement -> declaration_statement .)
    VOID            reduce using rule 30 (statement -> declaration_statement .)
    NUMBER          reduce using rule 30 (statement -> declaration_statement .)
    LPAREN          reduce using rule 30 (statement -> declaration_statement .)
    BREAK           reduce using rule 30 (statement -> declaration_statement .)


state 27

    (31) statement -> if_else_statement .

    RBRACE          reduce using rule 31 (statement -> if_else_statement .)
    LBRACE          reduce using rule 31 (statement -> if_else_statement .)
    SEMI            reduce using rule 31 (statement -> if_else_statement .)
    IF              reduce using rule 31 (statement -> if_else_statement .)
    FOR             reduce using rule 31 (statement -> if_else_statement .)
    DO              reduce using rule 31 (statement -> if_else_statement .)
    SWITCH          reduce using rule 31 (statement -> if_else_statement .)
    RETURN          reduce using rule 31 (statement -> if_else_statement .)
    IDENTIFIER      reduce using rule 31 (statement -> if_else_statement .)
    INT             reduce using rule 31 (statement -> if_else_statement .)
    VOID            reduce using rule 31 (statement -> if_else_statement .)
    NUMBER          reduce using rule 31 (statement -> if_else_statement .)
    LPAREN          reduce using rule 31 (statement -> if_else_statement .)
    BREAK           reduce using rule 31 (statement -> if_else_statement .)


state 28

    (32) statement -> for_loop .

    RBRACE          reduce using rule 32 (statement -> for_loop .)
    LBRACE          reduce using rule 32 (statement -> for_loop .)
    SEMI            reduce using rule 32 (statement -> for_loop .)
    IF              reduce using rule 32 (statement -> for_loop .)
    FOR             reduce using rule 32 (statement -> for_loop .)
    DO              reduce using rule 32 (statement -> for_loop .)
    SWITCH          reduce using rule 32 (statement -> for_loop .)
    RETURN          reduce using rule 32 (statement -> for_loop .)
    IDENTIFIER      reduce using rule 32 (statement -> for_loop .)
    INT             reduce using rule 32 (statement -> for_loop .)
    VOID            reduce using rule 32 (statement -> for_loop .)
    NUMBER          reduce using rule 32 (statement -> for_loop .)
    LPAREN          reduce using rule 32 (statement -> for_loop .)
    BREAK           reduce using rule 32 (statement -> for_loop .)


state 29

    (33) statement -> do_while_loop .

    RBRACE          reduce using rule 33 (statement -> do_while_loop .)
    LBRACE          reduce using rule 33 (statement -> do_while_loop .)
    SEMI            reduce using rule 33 (statement -> do_while_loop .)
    IF              reduce using rule 33 (statement -> do_while_loop .)
    FOR             reduce using rule 33 (statement -> do_while_loop .)
    DO              reduce using rule 33 (statement -> do_while_loop .)
    SWITCH          reduce using rule 33 (statement -> do_while_loop .)
    RETURN          reduce using rule 33 (statement -> do_while_loop .)
    IDENTIFIER      reduce using rule 33 (statement -> do_while_loop .)
    INT             reduce using rule 33 (statement -> do_while_loop .)
    VOID            reduce using rule 33 (statement -> do_while_loop .)
    NUMBER          reduce using rule 33 (statement -> do_while_loop .)
    LPAREN          reduce using rule 33 (statement -> do_while_loop .)
    BREAK           reduce using rule 33 (statement -> do_while_loop .)


state 30

    (34) statement -> switch_statement .

    RBRACE          reduce using rule 34 (statement -> switch_statement .)
    LBRACE          reduce using rule 34 (statement -> switch_statement .)
    SEMI            reduce using rule 34 (statement -> switch_statement .)
    IF              reduce using rule 34 (statement -> switch_statement .)
    FOR             reduce using rule 34 (statement -> switch_statement .)
    DO              reduce using rule 34 (statement -> switch_statement .)
    SWITCH          reduce using rule 34 (statement -> switch_statement .)
    RETURN          reduce using rule 34 (statement -> switch_statement .)
    IDENTIFIER      reduce using rule 34 (statement -> switch_statement .)
    INT             reduce using rule 34 (statement -> switch_statement .)
    VOID            reduce using rule 34 (statement -> switch_statement .)
    NUMBER          reduce using rule 34 (statement -> switch_statement .)
    LPAREN          reduce using rule 34 (statement -> switch_statement .)
    BREAK           reduce using rule 34 (statement -> switch_statement .)


state 31

    (35) statement -> return_statement .

    RBRACE          reduce using rule 35 (statement -> return_statement .)
    LBRACE          reduce using rule 35 (statement -> return_statement .)
    SEMI            reduce using rule 35 (statement -> return_statement .)
    IF              reduce using rule 35 (statement -> return_statement .)
    FOR             reduce using rule 35 (statement -> return_statement .)
    DO              reduce using rule 35 (statement -> return_statement .)
    SWITCH          reduce using rule 35 (statement -> return_statement .)
    RETURN          reduce using rule 35 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 35 (statement -> return_statement .)
    INT             reduce using rule 35 (statement -> return_statement .)
    VOID            reduce using rule 35 (statement -> return_statement .)
    NUMBER          reduce using rule 35 (statement -> return_statement .)
    LPAREN          reduce using rule 35 (statement -> return_statement .)
    BREAK           reduce using rule 35 (statement -> return_statement .)


state 32

    (37) expression_statement -> expression . SEMI

    SEMI            shift and go to state 52


state 33

    (39) expression_statement -> SEMI .

    RBRACE          reduce using rule 39 (expression_statement -> SEMI .)
    LBRACE          reduce using rule 39 (expression_statement -> SEMI .)
    SEMI            reduce using rule 39 (expression_statement -> SEMI .)
    IF              reduce using rule 39 (expression_statement -> SEMI .)
    FOR             reduce using rule 39 (expression_statement -> SEMI .)
    DO              reduce using rule 39 (expression_statement -> SEMI .)
    SWITCH          reduce using rule 39 (expression_statement -> SEMI .)
    RETURN          reduce using rule 39 (expression_statement -> SEMI .)
    IDENTIFIER      reduce using rule 39 (expression_statement -> SEMI .)
    INT             reduce using rule 39 (expression_statement -> SEMI .)
    VOID            reduce using rule 39 (expression_statement -> SEMI .)
    NUMBER          reduce using rule 39 (expression_statement -> SEMI .)
    LPAREN          reduce using rule 39 (expression_statement -> SEMI .)
    BREAK           reduce using rule 39 (expression_statement -> SEMI .)


state 34

    (38) expression_statement -> assignment . SEMI

    SEMI            shift and go to state 53


state 35

    (40) declaration_statement -> declaration . SEMI

    SEMI            shift and go to state 54


state 36

    (17) if_else_statement -> IF . LPAREN condition RPAREN LBRACE statements RBRACE else_part

    LPAREN          shift and go to state 55


state 37

    (10) for_loop -> FOR . LPAREN for_init SEMI condition SEMI for_update RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 56


state 38

    (16) do_while_loop -> DO . LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMI

    LBRACE          shift and go to state 57


state 39

    (21) switch_statement -> SWITCH . LPAREN expression RPAREN LBRACE case_list RBRACE

    LPAREN          shift and go to state 58


state 40

    (62) return_statement -> RETURN . expression SEMI
    (63) return_statement -> RETURN . SEMI
    (45) expression -> . simple_expression
    (46) expression -> . simple_expression relation simple_expression
    (47) simple_expression -> . term
    (48) simple_expression -> . simple_expression PLUS term
    (49) simple_expression -> . simple_expression MINUS term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . IDENTIFIER
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN

    SEMI            shift and go to state 60
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 44
    LPAREN          shift and go to state 20

    expression                     shift and go to state 59
    simple_expression              shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 41

    (45) expression -> simple_expression .
    (46) expression -> simple_expression . relation simple_expression
    (48) simple_expression -> simple_expression . PLUS term
    (49) simple_expression -> simple_expression . MINUS term
    (56) relation -> . EQ
    (57) relation -> . NE
    (58) relation -> . LT
    (59) relation -> . LE
    (60) relation -> . GT
    (61) relation -> . GE

    SEMI            reduce using rule 45 (expression -> simple_expression .)
    RPAREN          reduce using rule 45 (expression -> simple_expression .)
    COLON           reduce using rule 45 (expression -> simple_expression .)
    PLUS            shift and go to state 62
    MINUS           shift and go to state 63
    EQ              shift and go to state 64
    NE              shift and go to state 65
    LT              shift and go to state 66
    LE              shift and go to state 67
    GT              shift and go to state 68
    GE              shift and go to state 69

    relation                       shift and go to state 61

state 42

    (47) simple_expression -> term .
    (51) term -> term . MULT factor
    (52) term -> term . DIV factor
